# ThermoPiTemp

./: .gitignore  CMakeLists.txt  README.md  TempSensor.cpp  TempSensor.h  main.cpp
cmake_modules/: FindWiringPi.cmake
